# dns_changer

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD
src/: main.rs
